# ray-tracer

./: CMakeLists.txt  README.md
images/: book-one.ppm
include/: aabb.hpp  bvh.hpp  constant-medium.hpp  hittable.hpp  image.hpp  material.hpp  model.hpp  perlin.hpp  ppm.hpp  quad.hpp  random.hpp  ray.hpp  renderer.hpp  sphere.hpp  texture.hpp  timer.hpp  triangle.hpp
src/: main.cpp
